--- a/canvas-test/index.html
+++ b/canvas-test/index.html
@@ -1,3 +1,3 @@
 <canvas id="game"></canvas>
-<!--<script src="index.js"></script>-->
-<script src="index2.js"></script>
+<script src="index.js"></script>
+<!--<script src="index2.js"></script>-->
